--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -70,6 +70,17 @@
   
 }
 
+@layer components {
+  .text-input {
+    @apply text-base font-medium leading-[24px] tracking-[0];
+  }
+
+
+   .shadow-shadow-sm {
+    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
+  }
+}
+
 body {
   font-family: var(--font-inter);
   background-color: var(--background-secondary);
