--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,6 +9,7 @@
   --background-tertiary: #F4F4F5;
   --background-extensions-background-blue: #DBEAFE;
   --background-extensions-background-green: #DCFCE7;
+  --background-extensions-background-red: #FEE2E2;
   --background-inverse-primary: #18181B;
 
   --border-primary: #E4E4E7;
@@ -54,6 +55,7 @@
   --color-background-inverse-primary: var(--background-inverse-primary);
   --color-background-extensions-background-blue: var(--background-extensions-background-blue);
   --color-background-extensions-background-green: var(--background-extensions-background-green);
+  --color-background-extensions-background-red: var(--background-extensions-background-red);
 
   --color-border-primary: var(--border-primary);
   --color-border-secondary: var(--border-secondary);
