--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -79,9 +79,12 @@
     @apply text-base font-medium leading-[24px] tracking-[0];
   }
 
-
    .shadow-shadow-sm {
     box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
+  }
+
+  .shadow-shadow-lg {
+    box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
   }
 }
 
